src/App.css
/* Definte Custom Fonts */
@font-face {
    font-family: 'circular-std-black';
    src: url('./font/CircularStd-Black.woff') format('woff');
    font-weight: 900;
    font-style: normal;
}

@font-face {
    font-family: 'circular-std-black-italic';
    src: url('./font/CircularStd-BlackItalic.woff') format('woff');
    font-weight: 900;
    font-style: italic;
}

@font-face {
    font-family: 'circular-std-bold';
    src: url('./font/CircularStd-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'circular-std-bold-italic';
    src: url('./font/CircularStd-BoldItalic.woff') format('woff');
    font-weight: bold;
    font-style: italic;
}

@font-face {
    font-family: 'circular-std-medium';
    src: url('./font/CircularStd-Medium.woff') format('woff');
    font-weight: 500;
    font-style: normal;
}

@font-face {
    font-family: 'circular-std-medium-italic';
    src: url('./font/CircularStd-MediumItalic.woff') format('woff');
    font-weight: 500;
    font-style: italic;
}

@font-face {
    font-family: 'circular-std-book';
    src: url('./font/CircularStd-Book.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'circular-std-book-italic';
    src: url('./font/CircularStd-BookItalic.woff') format('woff');
    font-weight: normal;
    font-style: italic;
}

/* Global Styles */

.App {
  width: 784px;
  margin-left: auto;
  margin-right: auto;
}

/* Header Styles */

.header {
  width: 100%;
  margin-top: 115px;
  margin-bottom: 76px;
  font-family: circular-std-medium, Arial, sans-serif;
}

.header .navigation {
  width: 100%;
  display: flex;
}

.header .navigation div a {
  color: #BBBBBB;
  text-decoration: none;
  transition: color 0.2s;
}

.header .navigation div a:hover {
  color: black !important;
}

.header .navigation div a:visited {
  color: inherit;
}

.header .overlay {
  visibility: hidden;
  position: fixed;
  z-index: 100;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: white;
  opacity: 0;
  transition: opacity 0.5s;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.header .overlay .submenus {
  height: 180px;
  margin-top: auto;
  margin-bottom: auto;
  display: flex;
  flex-wrap: wrap;
}

.header .overlay .submenus .work-mobile,
.header .overlay .articles-mobile,
.header .overlay .about-mobile {
  width: 100%;
  font-size: 24px;
}

.header .overlay .submenus .active {
  color: black;
}

.header .overlay .submenus .inactive {
  color: #BBBBBB;
}

.show {
  visibility: visible !important;
  opacity: 1 !important;
}
.hide {
  visibility: hidden !important;
}

.header .navigation-sub {
  width: 276px;
  font-size: 22px;
  display: flex;
}

.header .navigation .anne {
  font-size: 26px;
  width: calc(100% - 276px);
  line-height: 36px;
}

.header .navigation .navigation-sub .active {
  color: black;
}

.header .navigation .navigation-sub .inactive {
  color: #BBBBBB;
}

.header .navigation .navigation-sub .work, .articles {
  padding-right: 40px;
}

.header .designer {
  font-size: 26px;
  line-height: 36px;
}

.header .speciality {
  font-size: 20px;
  color: #02CF5D;
  line-height: 36px;
}

/* Footer */
.footer {
  margin-top: 60px;
  margin-bottom: 60px;
  text-align: center;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.footer .footer-statement {
  font-family: circular-std-medium, Arial, sans-serif;
  font-size: 18px;
  line-height: 28px;
  margin: 0px auto 11px auto;
  width: 100%;
}

.footer .social-links {
  display: flex;
  justify-content: center;
  width: 100%;
}

.footer .social-links .social {
  background-color: #000000;
  border-radius: 32px;
  width: 32px;
  height: 32px;
  margin-right: 8px;
}

.footer .social-links .social-last {
  background-color: #000000;
  border-radius: 32px;
  width: 32px;
  height: 32px;
  margin-right: 0px;
}

.footer .social-links .social .behance {
  width: 19px;
  height: 12px;
  padding: 10px 6.5px 10px 6.5px;
}

.footer .social-links .social .linkedin {
  width: 16px;
  height: 14px;
  padding: 8px 8px 10px 8px;
}

.footer .social-links .social .medium {
  width: 16px;
  height: 12px;
  padding: 10px 8px 10px 8px;
}

.footer .social-links .social-last .email {
  width: 16px;
  height: 12px;
  padding: 10px 8px 10px 8px;
}

.footer .footer-copyright {
  font-family: circular-std-book, Arial, sans-serif;
  font-size: 14px;
  color: #B1B1B1;
  line-height: 36px;
  margin: 20px auto 0px auto;
  width: 100%;
}


/* MAIN PAGE */

/* Project List */

.projects {
  width: 100%;
  font-family: circular-std-medium, Arial, sans-serif;
  display: flex;
  justify-content: space-between;
}

.projects .left {
  width: 369px;
}

.projects .left .projects-intro {
  font-family: circular-std-book;
  margin-top: 0px;
  margin-bottom: 58px;
  font-size: 18px;
  line-height: 28px;
}

.projects .left .projects-intro .bold {
  font-family: circular-std-medium, Arial, sans-serif;
}

.projects .right {
  width: 369px;
}

/* Individual Project */
.project a {
  text-decoration: none;
  color: inherit;
}

.project a:visited {
  color: black;
}

.hmw {
  position: absolute;
  z-index: 10;
  opacity: 0;
  transition: opacity 0.4s;
}

.show-hmw {
  opacity: 1;
}

.change-color-0 {
  color: #0B9C96;
}

.change-color-1 {
  color: #E96F5E;
}

.change-color-2 {
  color: #FBC060;
}

.change-color-3 {
  color: #72A4EE;
}

.change-scale {
  transform: scale(1.05);
}

.hmw .hmw-background {
  width: 369px;
  height: 369px;
  text-align: center;
  font-family: circular-std-medium, Arial, sans-serif;
  color: #FFFFFF;
  font-size: 20px;
  line-height: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.project-default {
  width: 100%;
  margin-bottom: 52px;
}

.project-last {
  width: 100%;
  margin-bottom: 0px;
}

.project-image {
  width: 369px;
  height: 369px;
  overflow: hidden;
  margin-bottom: 19px;
  box-shadow: 0px 0px 20px #E8E8E8;
}

.project-image-size {
  width: 369px;
  height: 369px;
  transition: transform 0.4s;
}

.project-title {
  font-size: 18px;
  line-height: 28px;
  transition: color 0.4s;
}

.project-category {
  font-family: circular-std-book, Arial, sans-serif;
  font-size: 18px;
  line-height: 28px;
  transition: color 0.4s;
}


/* ARTICLES PAGE */

/* Articles List */

.articles {
  width: 100%;
  font-family: circular-std-medium, Arial, sans-serif;
  display: flex;
  justify-content: space-between;
}

.articles .left {
  width: 369px;
}

.articles .left .articles-intro {
  font-family: circular-std-book;
  margin-top: 0px;
  margin-bottom: 58px;
  font-size: 18px;
  line-height: 28px;
}

.articles .left .articles-intro .bold {
  font-family: circular-std-medium, Arial, sans-serif;
}

.articles .right {
  width: 369px;
}

/* Individual Article */

.article a {
  text-decoration: none;
  color: inherit;
}

.article a:visited {
  color: black;
}

.article-default,
.article-last {
  width: 100%;
  height: 369px;
  box-sizing: border-box;
  border: 1px solid #E6E6E6;
  box-shadow: 0px 0px 20px rgba(217, 217, 217, 0.2);
}

.article-default {
  margin-bottom: 52px;
}

.article-last {
  margin-bottom: 0px;
}

.article-image {
  width: 367px;
  height: 223px;
  overflow: hidden;
}

.article-image-size {
  width: 367px;
  height: 223px;
  transition: transform 0.4s;
}

.article-contents {
  padding: 19px 25px 19px 25px;
}

.article-title {
  font-family: circular-std-medium, Arial, sans-serif;
  font-size: 18px;
  line-height: 22px;
  margin-bottom: 6px;
}

.article-subtitle {
  font-family: circular-std-book, Arial, sans-serif;
  font-size: 16px;
  line-height: 22px;
}

.article-date {
  color: #A0A0A0;
  font-family: circular-std-book, Arial, sans-serif;
  font-size: 12px;
  line-height: 28px;
}

.one-line {
  margin-top: 21px;
}

.two-line {
  margin-top: 5px;
}


/* ABOUT PAGE */

.about-image {
  width: 784px;
  height: 522px;
  box-shadow: 0px 0px 10px rgba(224, 224, 224, 0.5);
}

.about-content {
  margin-top: 50px;
  font-family: circular-std-book, Arial, sans-serif;
  font-size: 18px;
  line-height: 21.5px;
}

.about-title {
  font-family: circular-std-bold, Arial, sans-serif;
  font-size: 20px;
}

